[package]
name = "sts2-pie"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
glob = "0.3"
dirs = "5"
anyhow = "1"
chrono = "0.4"
rfd = "0.15"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
